<resources>
    <string name="app_name">CTSService</string>
    <string name="familygroup">家庭圈</string>
    <string name="findfamily">寻找亲人</string>
    <string name="activities">活动推荐</string>
    <string name="scan">扫一扫参加活动</string>
    <string name="shake">摇一摇提醒父母喝水吃药</string>
    <string name="user_score">积分</string>
    <string name="add">添加</string>
    <string name="bind">绑定</string>
    <string name="message">消息</string>
    <string name="personnal">个人</string>
    <string name="notes">便签</string>
    <string name="family">家庭</string>
    <string name="main_login_id_prompt">账号</string>
    <string name="main_login_pwd_promp">密码</string>
    <string name="main_login_title">登入</string>
    <string name="login_if_forget_pwd">忘记密码</string>
    <string name="no_account">立即注册</string>
    <string name="input_phone_email">输入手机号</string>
    <string name="get_ver_code">请获取验证码</string>
    <string name="input_ver_code">输入验证码</string>
    <string name="new_pwd_text">新密码：</string>
    <string name="affirm_pwd_text">确认密码：</string>
    <string name="hint_password">  请填写6-16位字符</string>
    <string name="hint_password_again">  请再次确认密码</string>
    <string name="confirm">确认</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="email">邮箱</string>
    <string name="mobile">手机</string>
    <string name="sign">签名</string>
    <string name="man">男</string>
    <string name="lula">女</string>
    <string name="sex">性别</string>
    <string name="nickname">昵称</string>
    <string name="action_settings">Settings</string>
    <string name="clicklogin">请点击登入</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="actionbar_title_search">搜索</string>
    <string name="logo_qq">QQ</string>
    <string name="logo_qzone">QQ空间</string>
    <string name="logo_shortmessage">信息</string>
    <string name="logo_sinaweibo">新浪微博</string>
    <string name="logo_wechat">微信</string>
    <string name="logo_wechatmoments">微信朋友圈</string>
    <string name="share">分享</string>
    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="loading">加载中</string>
    <string name="draft_tweet_message">是否保存为草稿?</string>
    <string name="cancle">取消</string>
    <string name="ok">确定</string>
    <string name="copy_success">复制成功</string>
    <string name="actionbar_title_noteedit">编辑标签</string>




</resources>
